[metadata]
name = quingo
version = 0.1.4
author = Xiang Fu
author_email = gtaifu@gmail.com
use_2to3 = False
description = Quingo Runtime System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitee.com/quingo/quingo-runtime
project_urls =
    Bug Tracker = https://gitee.com/quingo/quingo-runtime/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =find:
python_requires = >=3.7
install_requires =
    numpy
    pyqcas
    pyqcisim
    colorama
    termcolor
    requests
    tqdm

[options.packages.find]
where = src