[metadata]
name = quingo
version = 0.3.0
author = Xiang Fu
author_email = gtaifu@gmail.com
use_2to3 = False
description = Quingo Runtime System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitee.com/quingo/quingo-runtime
project_urls =
    Bug Tracker = https://gitee.com/quingo/quingo-runtime/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =find:
python_requires = >=3.7
install_requires =
    numpy
    pyqcisim >= 1.3.1
    symqc >= 1.1.1
    colorama
    termcolor
    requests
    tqdm
    qualesim >= 1.0.2
    qualesim-tequila >= 1.0.2
    pyquiet >= 0.0.4

[options.packages.find]
where = src